# course_work_4_API

./: README.md  main.py  pyproject.toml
data/: test_file.json  vacancies.json
src/: AbstractGetAPIHH.py  AbstractJsonSave.py  GetAPIHH.py  JsonSave.py  Vacancy.py
tests/: conftest.py  test_get_api_hh.py  test_json_save.py
