[tool.poetry]
name = "course-work-5-api"
version = "0.1.0"
description = ""
authors = ["Roman Slobolinsky <rslobolinsky13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.1"
requests = "^2.31.0"
pytest-cov = "^4.1.0"
coverage = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
